--- a/index.css
+++ b/index.css
@@ -1,38 +1,108 @@
-html,
-body,
-header,
-#intro {
-    height: 100%; 
-}
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-.nav-link {
-  color: #0078ff !important;
-  font-family: sans-serif;
+ .header-scrolled{
+  border-bottom: 3px solid red;
+  background-color: #000 !important;
+ }
+ * {
+    margin:0;
+    padding:0;
+    font-family: verdana;
+ }
+body{
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
-
-#intro {
-    background:url(portfoliobackground.jpg)no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+#landing{
+  width: 100%;
+  height: 100vh;
+  background-image: url(img/portfoliobackground.jpg);
+  background-size: cover;
 }
 
-footer{
-  background:url(portfoliobackground.jpg)no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+.toggle {
+  font-size: 30px;
+  width: 100%;
+  color: #fff ;
+  text-align: right;
+  display: none;
+  padding: 5px 20px;
+  cursor: pointer;
 }
 
+@media screen and (max-width: 768px) {
+  .toggle{
+  display: block;
+  position: relative;
+  }
+    nav ul{
+    display: none;
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    }
+   nav ul li{
+      display: block;
+       width: 100%;
+    }
+    .active{
+  display: block;
+  background-color: black;
+ 
+}
+  }
+
+nav img{
+    line-height: 10px;
+    width: 100px;
+    height: 90px;
+    vertical-align: middle;
+  float: left;
+}
+
+nav{
+  width: 100%;
+  height: 80px;
+  background-color: #000;
+}
+nav ul{
+  margin-right: 30px;
+  float: right;
+    line-height: 15px;
+}
+nav ul li{
+  display: inline-block;
+  list-style-type: none;
+  transition: 0.9s all
+}
+nav ul li a:hover{
+  color: #0078ff
+}
+nav ul li a{
+  text-decoration: none !important;
+  color: #fff;
+  padding: 30px;
+}
+#intro{
+  color: #fff;
+  text-align: center;
+  margin-top: 25%;
+}
+
+#about{
+  border-radius: 25px
+}
+.contact{
+  border-radius: 25px
+}
+
+.footer{
+  background:url(img/portfoliobackground.jpg)no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  overflow: hidden;
+}
 
 .works:hover img {
   -webkit-transform: scale(1.3);
@@ -53,33 +123,26 @@ footer{
   color: black
 }
 
-a img{
-  width: 60px;
-  height: 50px;
-  margin: 0;
-  padding: 0
-}
-
 .aboutimg img{
-width: 200px;
-height: 200px;
-    object-fit: cover;
+  border-radius: 30px;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }
 
 .work-img img{
-    width: 200px;
-    height: 150px;
-    object-fit: cover;
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
 }
 
 /*------/ Socials /------*/
 
 .socials ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 
 .socials .ico-circle {
   height: 40px;
@@ -108,6 +171,7 @@ height: 200px;
   color: black;
 }
 
+/*sevice icons*/
 .service-icon:hover {
   background-color: #0078ff;
   color: #fff;
