--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -32,15 +32,16 @@
     text-align: center;
   }
 
-  body {
-  padding: 40px 0;
+  .container {
+  padding: 30px;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   grid-gap: 20px;
   align-items: stretch;
+  margin: 30px;
 }
 
 .grid > article {
@@ -54,4 +55,8 @@
 
 .grid .text {
   padding: 20px;
+}
+
+@media (max-width: 600px) {
+  .grid { grid-template-columns: repeat(2, 1fr); }
 }
