--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
-  background: linear-gradient(90deg, #1171ef 0%, #04c8de 100%); /* w3c */
+  background: linear-gradient(90deg, #060c14 0%, #0e2b2e 100%); /* w3c */
+  overflow-x: hidden;
 }
 
 button {
