styled pages to make it better

--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -84,8 +84,13 @@
   padding: 20px;
 }
 
+.fsm {font-size:4rem}
+
 @media (max-width: 600px) {
   .gridd { grid-template-columns: repeat(2, 1fr); }
+  .respo {width:100% !important}
+  .fs{font-size:2rem}
+  .img {display: none;}
 }
 
 .marque{
