--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -11,12 +11,12 @@ nav ul{}
 nav ul li{float:left;}
 nav ul li:last-child{padding-right:0px;}
 nav ul li a{color:#fff; font-size:18px; padding: 25px 20px; display:inline-block; transition: all 0.5s ease 0s;}
-nav ul li a:hover{background-color:#fff; color:#060c14; transition: all 0.5s ease 0s;}
-nav ul li a:hover i{color:#fde428; transition: all 0.5s ease 0s;}
+nav ul li a:hover{ color:#060c14; transition: all 0.5s ease 0s;}
+nav ul li a:hover i{color:#fff; transition: all 0.5s ease 0s;}
 nav ul li a i{padding-right:10px; color:#002e5b; transition: all 0.5s ease 0s;}
 
 .toggle-menu ul{display:table; width:25px;}
-.toggle-menu ul li{width:100%; height:3px; background-color:#002e5b; margin-bottom:4px;}
+.toggle-menu ul li{width:100%; height:3px; background-color:#fff; margin-bottom:4px;}
 .toggle-menu ul li:last-child{margin-bottom:0px;}
 
 input[type=checkbox], label{display:none;}
@@ -43,7 +43,7 @@ input[type=checkbox]:fous{background:none;}
 label {float:right; padding:8px 0px; display:inline-block; cursor:pointer; }
 input[type=checkbox]:checked ~ nav {display:block;}
 
-nav{display:none; position:absolute; right:0px; top:53px; background-color:#002e5b; padding:0px; z-index:99;}
+nav{display:none; position:absolute; right:0px; top:53px;width:50%; background-color:#060c14; padding:0px; z-index:99;}
 nav ul{width:auto;}
 nav ul li{float:none; padding:0px; width:100%; display:table;}
 nav ul li a{color:#FFF; font-size:15px; padding:10px 20px; display:block; border-bottom: 1px solid rgba(225,225,225,0.1);}
