--- a/client/src/components/Landing.css
+++ b/client/src/components/Landing.css
@@ -36,13 +36,35 @@
   padding: 30px;
 }
 
+.gd {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-gap: 20px;
+  align-items: stretch;
+  margin: 30px;
+  width:60%
+}
+
+.gd > article {
+  border: 0px solid #ccc;
+  box-shadow: 2px 2px 6px 0px rgba(0, 0, 0, 0.3);
+}
+
+@media (max-width: 600px) {
+  .gd { grid-template-columns: repeat(1, 1fr);
+    grid-gap:10px;
+    width:auto;
+    margin: 0px 10px;
+   }
+}
+
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 20px;
   align-items: stretch;
   margin: 30px;
-  width:80%
+  width:70%
 }
 
 .grid > article {
