--- a/client/src/components/Navigation/Navigation.css
+++ b/client/src/components/Navigation/Navigation.css
@@ -1,4 +1,4 @@
-*{text-decoration:none; list-style:none; margin:0px; padding:0px; outline:none;}
+/* *{text-decoration:none; list-style:none; margin:0px; padding:0px; outline:none;}
 body{margin:0px; padding:0px; font-family: 'Open Sans', sans-serif;}
 section{width:100%; max-width:1200px; margin:0px auto; display:table; position:relative;}
 h1{margin:0px auto; display:table; font-size:26px; padding:40px 0px; color:#002e5b; text-align:center;}
@@ -72,4 +72,4 @@ nav{top:47px;}
 
 @media only screen and (max-width: 320px) {
 h1 {padding: 20px 0px;}
-}
+} */
